Provide access to gpointer struct values

https://bugzilla.gnome.org/show_bug.cgi?id=668356

Signed-off-by: Martin Pitt <martin.pitt@ubuntu.com>